--- a/index.html
+++ b/index.html
@@ -11,7 +11,18 @@
 </head>
 
 <body>
-    <p class="red">HEllo</p>
+
+    <div class="box">
+        <p class="number-column" id="demo1"></p>
+        <p class="numbermax-column" id="demo3"></p>
+        <p class="star-column" id="demo2"></p>
+        <p class="starmax-column" id="demo4"></p>
+    </div>
+    <script src="/js/numberCalculater.js"></script>
+    <script src="/js/starCalculater.js"></script>
+
+
+<h2></h2>    
 </body>
 
 </html>
